--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta charset="utf-8">
 
     <title>Static</title>
-
 </head>
 
 <body>
-
-    <h1>Static page</h1>
-
+    <div id="root"></div>
 </body>
 </html>
